Add bot check to profiles.

--- a/src/locales/en-GB.json
+++ b/src/locales/en-GB.json
@@ -18,6 +18,7 @@
   },
 
   "economy": {
+    "BOTS_NOT_ALLOWED": "Bots can't have profiles.",
     "GENDER": "Gender",
     "FEMALE": "Female",
     "LOVER": "Lover",
