--- a/src/locales/en-GB.json
+++ b/src/locales/en-GB.json
@@ -35,7 +35,7 @@
 
   "general": {
     "HELP": "Help",
-    "HELP_DESCRIPTION": "If you'd like to support the development of Syrim or the developer, you can donate. All donations are appreciated.\n\n[Donate with Cryptocurrency](COINBASE_LINK)\n[Donate with PayPal](KOFI_LINK)",
+    "HELP_DESCRIPTION": "If you'd like to support the development of Syrim or the developer, you can donate. All donations are appreciated.\n\n[Donate](https://github.com/Spencer-0003/Syrim/blob/master/README.md#donations)",
     "HELP_PERMISSIONS_YOU_NEED": "Permissions You Need",
     "HELP_PERMISSIONS_I_NEED": "Permissions I Need",
     "USAGE": "Usage"
