--- a/src/locales/en-GB.json
+++ b/src/locales/en-GB.json
@@ -28,6 +28,7 @@
     "SET_COLOR_DESCRIPTION": "Use the buttons below to set your color.",
     "SET_GENDER_DESCRIPTION": "Use the buttons below to set your gender.",
     "SINGLE": "Single",
+    "SUCCESSFULLY_SET_BIO": "You've successfully set your bio.",
     "SUCCESSFULLY_SET_COLOR": "You've successfully set your color.",
     "SUCCESSFULLY_SET_GENDER": "You've successfully set your gender.",
     "UNDISCLOSED": "Undisclosed"
