--- a/src/locales/en-GB.json
+++ b/src/locales/en-GB.json
@@ -1,5 +1,6 @@
 {
   "global": {
+    "CONFIRM": "Confirm",
     "ERROR": "Error",
     "NONE": "None",
     "SUCCESS": "Success"
@@ -20,6 +21,7 @@
   "economy": {
     "BOTS_NOT_ALLOWED": "Bots can't have profiles.",
     "DELETE_PROFILE": "Delete Profile",
+    "DELETE_PROFILE_DESCRIPTION": "If you're sure you want to delete your profile, press the button below.\nUsing any command will remake your profile.",
     "GENDER": "Gender",
     "FEMALE": "Female",
     "LOVER": "Lover",
@@ -29,6 +31,7 @@
     "SET_COLOR_DESCRIPTION": "Use the buttons below to set your color.",
     "SET_GENDER_DESCRIPTION": "Use the buttons below to set your gender.",
     "SINGLE": "Single",
+    "SUCCESSFULLY_DELETED_PROFILE": "You've successfully delete your profile.",
     "SUCCESSFULLY_SET_BIO": "You've successfully set your bio.",
     "SUCCESSFULLY_SET_COLOR": "You've successfully set your color.",
     "SUCCESSFULLY_SET_GENDER": "You've successfully set your gender.",
