--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -26,6 +26,7 @@
     "FEMALE": "Female",
     "LOVER": "Lover",
     "MALE": "Male",
+    "REPUTATION": "Reputation",
     "SET_COLOR": "Set Color",
     "SET_GENDER": "Set Gender",
     "SET_COLOR_DESCRIPTION": "Use the buttons below to set your color.",
