--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -23,6 +23,7 @@
     "DELETE_PROFILE": "Delete Profile",
     "DELETE_PROFILE_DESCRIPTION": "If you're sure you want to delete your profile, press the button below.\nUsing any command will remake your profile.",
     "GENDER": "Gender",
+    "GLOBAL_LEVEL": "Global Level",
     "FEMALE": "Female",
     "LOVER": "Lover",
     "MALE": "Male",
