--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -24,6 +24,7 @@
     "DELETE_PROFILE_DESCRIPTION": "If you're sure you want to delete your profile, press the button below.\nUsing any command will remake your profile.",
     "GENDER": "Gender",
     "GLOBAL_LEVEL": "Global Level",
+    "GLOBAL_MONEY": "Global Money",
     "FEMALE": "Female",
     "LOVER": "Lover",
     "MALE": "Male",
