--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -19,6 +19,7 @@
   },
 
   "economy": {
+    "BIRTHDAY": "Birthday",
     "BOTS_NOT_ALLOWED": "Bots can't have profiles.",
     "DELETE_PROFILE": "Delete Profile",
     "DELETE_PROFILE_DESCRIPTION": "If you're sure you want to delete your profile, press the button below.\nUsing any command will remake your profile.",
