Added message component callback.

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -38,6 +38,7 @@
     "LOVER": "Lover",
     "MALE": "Male",
     "MARRIAGE": "Marriage",
+    "MARRIAGE_REQUEST_EXPIRED": "This marriage request has expired, you should send a new one!",
     "NEW_PROPOSAL": "USER, you have a new proposal from PROPOSER. Press the button below to accept their proposal.",
     "PROFILE_DOESNT_EXIST": "This user doesn't have a profile, you should tell them to make one!",
     "REPUTATION": "Reputation",
@@ -47,6 +48,7 @@
     "SET_GENDER_DESCRIPTION": "Use the buttons below to set your gender.",
     "SINGLE": "Single",
     "SPOUSE_ALREADY_MARRIED": "This person is already married.",
+    "SUCCESSFULLY_MARRIED": "🎉 You've just married <@PROPOSER> 🎉",
     "SPOUSE_ALREADY_REQUESTED": "<@SPOUSE> has already got a marriage request from <@SENDER>",
     "SUCCESSFULLY_DELETED_PROFILE": "You've successfully delete your profile.",
     "SUCCESSFULLY_SET_BIO": "You've successfully set your bio.",
