--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -30,6 +30,7 @@
     "BOTS_NOT_ALLOWED": "Bots can't have profiles.",
     "DELETE_PROFILE": "Delete Profile",
     "DELETE_PROFILE_DESCRIPTION": "If you're sure you want to delete your profile, press the button below.\nUsing any command will remake your profile.",
+    "DIVORCE": "Divorce",
     "GENDER": "Gender",
     "GLOBAL_LEVEL": "Global Level",
     "GLOBAL_MONEY": "Global Money",
@@ -40,6 +41,7 @@
     "MARRIAGE": "Marriage",
     "MARRIAGE_REQUEST_EXPIRED": "This marriage request has expired, you should send a new one!",
     "NEW_PROPOSAL": "USER, you have a new proposal from PROPOSER. Press the button below to accept their proposal.",
+    "NOT_MARRIED": "You're not married",
     "PROFILE_DOESNT_EXIST": "This user doesn't have a profile, you should tell them to make one!",
     "REPUTATION": "Reputation",
     "SET_COLOR": "Set Color",
@@ -51,12 +53,14 @@
     "SUCCESSFULLY_MARRIED": "🎉 You've just married <@PROPOSER> 🎉",
     "SPOUSE_ALREADY_REQUESTED": "<@SPOUSE> has already got a marriage request from <@SENDER>",
     "SUCCESSFULLY_DELETED_PROFILE": "You've successfully delete your profile.",
+    "SUCCESSFULLY_DIVORCED": "You've successfully divorced <@SPOUSE>.",
     "SUCCESSFULLY_SET_BIO": "You've successfully set your bio.",
     "SUCCESSFULLY_SET_BIRTHDAY": "You've successfully set your birthday.",
     "SUCCESSFULLY_SET_COLOR": "You've successfully set your color.",
     "SUCCESSFULLY_SET_GENDER": "You've successfully set your gender.",
     "UNDISCLOSED": "Undisclosed",
     "USER_ALREADY_REQUESTED": "You already have a marriage request from <@SENDER>",
+    "YOU_CANT_MARRY_YOURSELF": "You can't marry yourself.",
     "YOURE_ALREADY_MARRIED": "You're already married."
   },
 
