--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -65,15 +65,18 @@
   },
 
   "general": {
+    "DISCORD": "Discord",
     "HELP": "Help",
     "HELP_DESCRIPTION": "Click on one of the buttons below to select a category!",
     "HELP_PERMISSIONS_YOU_NEED": "Permissions You Need",
     "HELP_PERMISSIONS_I_NEED": "Permissions I Need",
     "HOST": "Host",
-    "SERVERS": "Servers",
-    "SHARDS": "Shards",
+    "SERVERS": "Server(s)",
+    "SHARDS": "Shard(s)",
+    "SOFTWARE": "Software",
     "STATS": "Stats",
-    "USAGE": "Usage"
+    "USAGE": "Usage",
+    "USERS": "User(s)"
   },
 
   "misc": {
