Fixed code smell in stats.

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -75,6 +75,7 @@
     "HOST": "Host",
     "INVITE_ME": "Invite me to your server",
     "JOIN_THE_DISCORD": "Join the Discord Server",
+    "PING": "Ping",
     "SERVERS": "Server(s)",
     "SHARDS": "Shard(s)",
     "SOFTWARE": "Software",
