Fixed missing locale for work.

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -67,6 +67,7 @@
     "SUCCESSFULLY_WORKED": "You made £MONEY by working.",
     "UNDISCLOSED": "Undisclosed",
     "USER_ALREADY_REQUESTED": "You already have a marriage request from <@SENDER>",
+    "WORK": "Work",
     "WORK_COOLDOWN": "You can't work for another TIME",
     "YOU_CANT_MARRY_BOTS": "You can't marry bots.",
     "YOU_CANT_MARRY_YOURSELF": "You can't marry yourself.",
