Added another missing translation.

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -28,6 +28,7 @@
     "INFO": "Get information about Syrim",
     "ECONOMY": "Economy commands",
     "MISC": "Miscellaneous commands",
+    "MODERATION": "Moderate your server",
     "NSFW": "Ooooh 😳"
   },
 
