Added command limit to createcommand.

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -4,6 +4,7 @@
     "COMMAND_EXISTS": "COMMAND already exists.",
     "HOW_TO_USE_CUSTOM_COMMAND": "To use your new command, use `/COMMAND`. It may take up to 15 minutes for the command to become available.",
     "INVALID_COMMAND_NAME": "Make sure your command name doesn't have any spaces and/or special characters.",
+    "MAX_COMMANDS_REACHED": "You have reached the maximum number of commands, to add more, please donate.",
     "SUCCESSFULLY_CREATED_COMMAND": "Successfully created command.",
     "SUCCESSFULLY_DELETED_COMMAND": "Successfully deleted command.",
     "SUCCESSFULLY_DELETED_COMMAND_DESCRIPTION": "COMMAND has been deleted, it may take up to 15 minutes for the command to be deleted from the server."
