--- a/src/locales/es-ES.json
+++ b/src/locales/es-ES.json
@@ -128,12 +128,16 @@
   "moderation": {
     "BAN_SYRIM": "¿Por qué querrías prohibirme? :frowning:",
     "KICK_SYRIM": "¿Por qué querrías patearme? :frowning:",
+    "MEMBER_NOT_IN_GUILD": "Este miembro no se encuentra en este servidor.",
+    "MUTE_SYRIM": "Why would you want to mute me? :frowning:",
     "NOT_SUPERIOR": "No puedes moderar a este usuario.",
     "NO_REASON_PROVIDED": "No se proporcionó ninguna razón.",
     "REASON": "Razón",
     "SUCCESSFULLY_BANNED": "Usuario Prohibido",
     "SUCCESSFULLY_BANNED_DESCRIPTION": "Has prohibido correctamente <@USER>.",
     "SUCCESSFULLY_KICKED": "Usuario Expulsado",
-    "SUCCESSFULLY_KICKED_DESCRIPTION": "Has pateado con éxito <@USER>."
+    "SUCCESSFULLY_KICKED_DESCRIPTION": "Has pateado con éxito <@USER>.",
+    "SUCCESSFULLY_MUTED": "Silenciado por el usuario",
+    "SUCCESSFULLY_MUTED_DESCRIPTION": "Has silenciado correctamente <@USER>."
   }
 }
