--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -138,6 +138,9 @@
     "SUCCESSFULLY_KICKED": "User Kicked",
     "SUCCESSFULLY_KICKED_DESCRIPTION": "You've successfully kicked <@USER>.",
     "SUCCESSFULLY_MUTED": "User Muted",
-    "SUCCESSFULLY_MUTED_DESCRIPTION": "You've successfully muted <@USER>."
+    "SUCCESSFULLY_MUTED_DESCRIPTION": "You've successfully muted <@USER>.",
+    "SUCCESSFULLY_UNMUTED": "User Unmuted",
+    "SUCCESSFULLY_UNMUTED_DESCRIPTION": "You've successfully unmuted <@USER>.",
+    "UNMUTE_SYRIM": "Cute gesture but I'm not muted :flushed:"
   }
 }
