Added toggle API component.

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -44,7 +44,9 @@
     "BOTS_NOT_ALLOWED": "Bots can't have profiles.",
     "DELETE_PROFILE": "Delete Profile",
     "DELETE_PROFILE_DESCRIPTION": "If you're sure you want to delete your profile, press the button below.\nUsing any command will remake your profile.",
+    "DISABLED_API": "You've successfully hidden your profile from the API.",
     "DIVORCE": "Divorce",
+    "ENABLED_API": "You've successfully made your profile visible to the API.",
     "FEMALE": "Female",
     "GENDER": "Gender",
     "GLOBAL_LEVEL": "Global Level",
@@ -73,6 +75,7 @@
     "SUCCESSFULLY_SET_COLOR": "You've successfully set your color.",
     "SUCCESSFULLY_SET_GENDER": "You've successfully set your gender.",
     "SUCCESSFULLY_WORKED": "You made £MONEY by working.",
+    "TOGGLE_API": "Toggle API Visibility",
     "UNDISCLOSED": "Undisclosed",
     "USER_ALREADY_REQUESTED": "You already have a marriage request from <@SENDER>",
     "WORK": "Work",
