--- a/src/locales/es-ES.json
+++ b/src/locales/es-ES.json
@@ -44,7 +44,9 @@
     "BOTS_NOT_ALLOWED": "Los bots no pueden tener perfiles.",
     "DELETE_PROFILE": "Eliminar Perfil",
     "DELETE_PROFILE_DESCRIPTION": "Si estás seguro de que quieres eliminar tu perfil, pulsa el botón de abajo.\nEl uso de cualquier comando rehará tu perfil.",
+    "DISABLED_API": "Has ocultado correctamente tu perfil de la API.",
     "DIVORCE": "Divorcio",
+    "ENABLED_API": "Has hecho que tu perfil sea visible para la API.",
     "FEMALE": "Femenino",
     "GENDER": "Género",
     "GLOBAL_LEVEL": "Nivel Global",
@@ -73,6 +75,7 @@
     "SUCCESSFULLY_SET_COLOR": "Has establecido tu color correctamente.",
     "SUCCESSFULLY_SET_GENDER": "Has establecido correctamente tu género.",
     "SUCCESSFULLY_WORKED": "Has ganado £MONEY trabajando.",
+    "TOGGLE_API": "Alternar visibilidad de API",
     "UNDISCLOSED": "No divulgado",
     "USER_ALREADY_REQUESTED": "Ya tienes una solicitud de matrimonio de <@SENDER>",
     "WORK": "Trabajo",
