--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -44,6 +44,7 @@
     "ATTRIBUTE_NOT_FOUND": "Attribute not found.",
     "ATTRIBUTE_SET": "You've successfully set an attribute.",
     "BIRTHDAY": "Birthday",
+    "BIRTHDAY_MODAL_TITLE": "Birthday (dd/mm/yyyy)",
     "BOTS_NOT_ALLOWED": "Bots can't have profiles.",
     "DELETE_PROFILE": "Delete Profile",
     "DELETE_PROFILE_DESCRIPTION": "If you're sure you want to delete your profile, press the button below.\nUsing any command will remake your profile.",
@@ -65,6 +66,7 @@
     "NOT_MARRIED": "You're not married",
     "PROFILE_DOESNT_EXIST": "This user doesn't have a profile, you should tell them to make one!",
     "REPUTATION": "Reputation",
+    "SET_BIRTHDAY": "Set Birthday",
     "SET_COLOR": "Set Color",
     "SET_COLOR_DESCRIPTION": "Use the buttons below to set your color.",
     "SET_GENDER": "Set Gender",
