Added missing translations.

--- a/src/locales/es-ES.json
+++ b/src/locales/es-ES.json
@@ -44,6 +44,7 @@
     "ATTRIBUTE_NOT_FOUND": "No se encontró el atributo.",
     "ATTRIBUTE_SET": "Has establecido un atributo correctamente.",
     "BIRTHDAY": "Cumpleaños",
+    "BIRTHDAY_MODAL_TITLE": "Cumpleaños (dd/mm/yyyy)",
     "BOTS_NOT_ALLOWED": "Los bots no pueden tener perfiles.",
     "DELETE_PROFILE": "Eliminar Perfil",
     "DELETE_PROFILE_DESCRIPTION": "Si estás seguro de que quieres eliminar tu perfil, pulsa el botón de abajo.\nEl uso de cualquier comando rehará tu perfil.",
@@ -65,6 +66,7 @@
     "NOT_MARRIED": "No estás casado",
     "PROFILE_DOESNT_EXIST": "Este usuario no tiene un perfil, ¡debes decirle que cree uno!",
     "REPUTATION": "Reputación",
+    "SET_BIRTHDAY": "Establecer Cumpleaños",
     "SET_COLOR": "Seleccionar Color",
     "SET_COLOR_DESCRIPTION": "Usa los botones de abajo para configurar tu color.",
     "SET_GENDER": "Establecer Género",
