Added SetBio modal.

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -43,6 +43,7 @@
     "ATTRIBUTE_DELETED": "Successfully deleted attribute.",
     "ATTRIBUTE_NOT_FOUND": "Attribute not found.",
     "ATTRIBUTE_SET": "You've successfully set an attribute.",
+    "BIO_MODAL_TITLE": "Your epic bio.",
     "BIRTHDAY": "Birthday",
     "BIRTHDAY_MODAL_TITLE": "Birthday (dd/mm/yyyy)",
     "BOTS_NOT_ALLOWED": "Bots can't have profiles.",
@@ -66,6 +67,7 @@
     "NOT_MARRIED": "You're not married",
     "PROFILE_DOESNT_EXIST": "This user doesn't have a profile, you should tell them to make one!",
     "REPUTATION": "Reputation",
+    "SET_BIO": "Set Bio",
     "SET_BIRTHDAY": "Set Birthday",
     "SET_COLOR": "Set Color",
     "SET_COLOR_DESCRIPTION": "Use the buttons below to set your color.",
