--- a/src/locales/es-ES.json
+++ b/src/locales/es-ES.json
@@ -43,6 +43,7 @@
     "ATTRIBUTE_DELETED": "Se eliminó correctamente el atributo.",
     "ATTRIBUTE_NOT_FOUND": "No se encontró el atributo.",
     "ATTRIBUTE_SET": "Has establecido un atributo correctamente.",
+    "BIO_MODAL_TITLE": "Tu biografía épica.",
     "BIRTHDAY": "Cumpleaños",
     "BIRTHDAY_MODAL_TITLE": "Cumpleaños (dd/mm/yyyy)",
     "BOTS_NOT_ALLOWED": "Los bots no pueden tener perfiles.",
@@ -66,6 +67,7 @@
     "NOT_MARRIED": "No estás casado",
     "PROFILE_DOESNT_EXIST": "Este usuario no tiene un perfil, ¡debes decirle que cree uno!",
     "REPUTATION": "Reputación",
+    "SET_BIO": "Bio Conjunto",
     "SET_BIRTHDAY": "Establecer Cumpleaños",
     "SET_COLOR": "Seleccionar Color",
     "SET_COLOR_DESCRIPTION": "Usa los botones de abajo para configurar tu color.",
