--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -39,7 +39,21 @@
   },
 
   "economy": {
-    "ACCEPT_PROPOSAL": "Accept proposal",
+    "marriage": {
+      "ACCEPT_PROPOSAL": "Accept proposal",
+      "DIVORCE": "Divorce",
+      "MARRIAGE_REQUEST_EXPIRED": "This marriage request has expired, you should send a new one!",
+      "NEW_PROPOSAL": "USER, you have a new proposal from PROPOSER. Press the button below to accept their proposal.",
+      "NOT_MARRIED": "You're not married",
+      "SPOUSE_ALREADY_MARRIED": "This person is already married.",
+      "SPOUSE_ALREADY_REQUESTED": "<@SPOUSE> has already got a marriage request from <@SENDER>",
+      "SUCCESSFULLY_DIVORCED": "You've successfully divorced <@SPOUSE>.",
+      "SUCCESSFULLY_MARRIED": "🎉 You've just married <@PROPOSER> 🎉",
+      "USER_ALREADY_REQUESTED": "You already have a marriage request from <@SENDER>",
+      "YOU_CANT_MARRY_BOTS": "You can't marry bots.",
+      "YOU_CANT_MARRY_YOURSELF": "You can't marry yourself.",
+      "YOURE_ALREADY_MARRIED": "You're already married."
+    },
     "ATTRIBUTE_DELETED": "Successfully deleted attribute.",
     "ATTRIBUTE_NOT_FOUND": "Attribute not found.",
     "ATTRIBUTE_SET": "You've successfully set an attribute.",
@@ -50,7 +64,6 @@
     "DELETE_PROFILE": "Delete Profile",
     "DELETE_PROFILE_DESCRIPTION": "If you're sure you want to delete your profile, press the button below.\nUsing any command will remake your profile.",
     "DISABLED_API": "You've successfully hidden your profile from the API.",
-    "DIVORCE": "Divorce",
     "ENABLED_API": "You've successfully made your profile visible to the API.",
     "FEMALE": "Female",
     "GENDER": "Gender",
@@ -61,10 +74,7 @@
     "LOVER": "Lover",
     "MALE": "Male",
     "MARRIAGE": "Marriage",
-    "MARRIAGE_REQUEST_EXPIRED": "This marriage request has expired, you should send a new one!",
     "MAXIMUM_ATTRIBUTES": "You've reached the maximum number of attributes, please delete one or donate.",
-    "NEW_PROPOSAL": "USER, you have a new proposal from PROPOSER. Press the button below to accept their proposal.",
-    "NOT_MARRIED": "You're not married",
     "PROFILE_DOESNT_EXIST": "This user doesn't have a profile, you should tell them to make one!",
     "REPUTATION": "Reputation",
     "SET_BIO": "Set Bio",
@@ -74,11 +84,7 @@
     "SET_GENDER": "Set Gender",
     "SET_GENDER_DESCRIPTION": "Use the buttons below to set your gender.",
     "SINGLE": "Single",
-    "SPOUSE_ALREADY_MARRIED": "This person is already married.",
-    "SPOUSE_ALREADY_REQUESTED": "<@SPOUSE> has already got a marriage request from <@SENDER>",
     "SUCCESSFULLY_DELETED_PROFILE": "You've successfully delete your profile.",
-    "SUCCESSFULLY_DIVORCED": "You've successfully divorced <@SPOUSE>.",
-    "SUCCESSFULLY_MARRIED": "🎉 You've just married <@PROPOSER> 🎉",
     "SUCCESSFULLY_SET_BIO": "You've successfully set your bio.",
     "SUCCESSFULLY_SET_BIRTHDAY": "You've successfully set your birthday.",
     "SUCCESSFULLY_SET_COLOR": "You've successfully set your color.",
@@ -86,12 +92,8 @@
     "SUCCESSFULLY_WORKED": "You made £MONEY by working.",
     "TOGGLE_API": "Toggle API Visibility",
     "UNDISCLOSED": "Undisclosed",
-    "USER_ALREADY_REQUESTED": "You already have a marriage request from <@SENDER>",
     "WORK": "Work",
-    "WORK_COOLDOWN": "You can't work for another TIME",
-    "YOU_CANT_MARRY_BOTS": "You can't marry bots.",
-    "YOU_CANT_MARRY_YOURSELF": "You can't marry yourself.",
-    "YOURE_ALREADY_MARRIED": "You're already married."
+    "WORK_COOLDOWN": "You can't work for another TIME"
   },
 
   "general": {
